--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <p>Follow me</p>
                     <hr class="divider">
                     <ul class="list-unstyled">
-                      <li><a href="#https://www.linkedin.com/in/william-sherrer-391221181/">LinkedIn</a></li>
+                      <li><a href="https://www.linkedin.com/in/william-sherrer-391221181/">LinkedIn</a></li>
                     </ul>
                   </div>
                 </div>
