--- a/index.html
+++ b/index.html
@@ -14,27 +14,22 @@
   
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="assets/css/themify-icons.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="assets/vendor/animate/animate.css">
-  <link rel="stylesheet" type="text/css" href="assets/vendor/owl-carousel/owl.carousel.css">
-  <link rel="stylesheet" type="text/css" href="assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
-  <link rel="stylesheet" type="text/css" href="assets/vendor/nice-select/css/nice-select.css">
-  <link rel="stylesheet" type="text/css" href="assets/vendor/fancybox/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
   <link rel="stylesheet" type="text/css" href="assets/css/virtual.css">
   <link rel="stylesheet" type="text/css" href="assets/css/topbar.virtual.css">
+  <script>
+    new WOW().init();
+  </script>
   
 </head>
 
 <body>
-    <header style="opacity: .8; top: 20px;">
+    <header style="opacity: .8; top: 40px;">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">Portfolio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
@@ -71,10 +66,10 @@
               <div class="row">
                 <div class="col-lg-4 py-3">
                   <div class="img-place wow fadeInUp">
-                    <img src="assets/img/W&E-11.JPEG" alt="" class="prof_image">
+                    <img src="assets/img/W&E-11.JPEG" alt="">
                   </div>
                 </div>
-                <div class="col-lg-6 offset-lg-1 about_description">
+                <div class="col-lg-6 offset-lg-1 wow fadeInLeft">
                   <h1 style="font-weight: 300; color:#2960f7;">William Sherrer</h1>
                   <h5 style="color:#2960f7;">Graduate Student: Computer Science @ Clemson University</h5>
                   <p class="text-muted">I am currently finishing my Master's in Computer Science with an emphasis on Network, Systems, and Security.
@@ -90,7 +85,7 @@
                 </div>
               </div>
             </div>
-            <div class="container pt-5" id="experience">
+            <div class="container pt-5 wow fadeInUp" id="experience">
                 <div class="row">
                   <div class="col-md-6">
                     <h2 class="fw-normal">Education</h2>
@@ -197,7 +192,7 @@
                   <div class="col-md-6">
                     <div class="px-lg-3">
                       <h4 class="wow fadeInUp">Coding skills</h4>
-                      <div class="progress-wrapper wow fadeInUp">
+                      <div class="progress-wrapper wow">
                         <span class="caption">C/C++</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
@@ -262,7 +257,7 @@
                           <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                       </div>
-                      <div class="progress-wrapper wow fadeInUp">
+                      <div class="progress-wrapper">
                         <span class="caption">Artificial Intelligence / Machine Learning</span>
                         <div class="progress">
                           <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
@@ -319,6 +314,9 @@
             </div>
           </div>
     </footer>
+
+    <script src="assets/js/wow.min.js"></script>
+    <script> new WOW().init(); </script>
     
 </body>
 </html>
