--- a/index.html
+++ b/index.html
@@ -195,31 +195,31 @@
                       <div class="progress-wrapper wow">
                         <span class="caption">C/C++</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 90%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">SQL</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">85%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 85%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">85%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Python</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 80%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">HTML/CSS/PHP</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 70%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">JavaScript</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 70%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
                         </div>
                       </div>
                     </div>
@@ -230,44 +230,44 @@
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Github / Git</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 90%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Basic Network Security</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">85%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 85%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">85%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Basic Cloud Security</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width:80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                          <div class="progress-bar" role="progressbar" style="width:80%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Basic Database Security</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 80%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                       </div>
                       <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Malware Reverse Engineering</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 80%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                       </div>
-                      <div class="progress-wrapper">
+                      <div class="progress-wrapper wow fadeInUp">
                         <span class="caption">Artificial Intelligence / Machine Learning</span>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                          <div class="progress-bar" role="progressbar" style="width: 80%; background-color: #2960f7;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="container py-5" id="interests">
+              <div class="container py-5 wow lightSpeedIn" id="interests">
                 <h1 style="color:#2960f7;">Interests</h1>
                 <h3 style="font-weight: 300; color:#2960f7;">Cybersecurity Engineer</h3>
                 <p class="text-muted">I desire to design, build, test systems that protects information. I think this could be a fun career path where I would
@@ -292,7 +292,7 @@
                     <p>Follow me</p>
                     <hr class="divider">
                     <ul class="list-unstyled">
-                      <li><a href="https://www.linkedin.com/in/william-sherrer-391221181/">LinkedIn</a></li>
+                      <li><a target="_blank" href="https://www.linkedin.com/in/william-sherrer-391221181/">LinkedIn</a></li>
                     </ul>
                   </div>
                 </div>
