--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           </div>
         </div>
       </div>
-      <div class="container py-5" id="skills">
+      <div class="container py-5 wow fadeInUp" id="skills">
         <h1 class="text-center fw-normal wow fadeIn">My Skills</h1>
         <div class="row py-3">
           <div class="col-md-6">
